# cyftools

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  plot_config.json
R/: frame_process.R  helpers.R  lda.R  matlab.R  orion.Rmd  orion_helpers.R  pheno_form.R  topicmodels.R
Rmd/: jhu.Rmd
docs/: ARCHITECTURE_REVIEW.md  COHORT_JSON.md  CYF_FORMAT.md  CYF_INTEGRATION.md  DEPENDENCY_CLEANUP.md  VIEWER_PACK.md  cohort.config.example.json  cyf_cohort.html  index.html
docs/reference/: cyf.py  example.py
html/: header.html  omero.html
matlab/: jerry.m
omero/: pyvenv.cfg
palettes/: allblack.csv  crc_pdl1.csv  crc_tcell_palette.csv  crc_tls_palette.csv  crc_tlscall_palette.csv  jhu_cd163.csv  jhu_cd20.csv  jhu_cd8.csv  jhu_cycif_erk.csv  jhu_pdl1.csv  jhu_revision.csv  panck_palette.csv  prostate_cd8.csv  prostate_gleason_palette.csv  prostate_tls_palette.csv  tumor_manual.csv  tumor_palette.csv  uncounted_palette.csv
python/: test.py
python/pysift/: setup.py
python/pysift/pysift/: __init__.py  core.py  test.py
scripts/: average.sh  cerealed.sh  chain.sh  config.sh  csv_rearrange.sh  frame.sh  header.sh  margin.sh  pheno.sh  phenotype.sh  process_file.sh  radial.sh  reid.sh  roi_shift.py  roi_shift.sh  spatial.sh  tumor.sh
src/: Makefile  bgzf.cpp  bgzf.h  cell_archive.h  cell_column.h  cell_filter.h  cell_flag.cpp  cell_flag.h  cell_graph.cpp  cell_graph.h  cell_header.cpp  cell_header.h  cell_header2.cpp  cell_header2.h  cell_lda.cpp  cell_lda.h  cell_processor.cpp  cell_processor.h  cell_row.cpp  cell_row.h  cell_selector.cpp  cell_selector.h  cell_synth.cpp  cell_synth.h  cell_table.cpp  cell_table.h  cell_table_cluster.cpp  cell_table_delaunay.cpp  cell_table_graph.cpp  cell_table_lda.cpp  cell_table_mlpack.cpp  cell_utils.cpp  cell_utils.h  color_map.cpp  color_map.h  compile_commands.json  cy_utils.h  cyf_field.h  cyf_flags.h  cyf_io.cpp  (+24 more)
src/aarand/: aarand.hpp
test/: cohort.config.json  test.csv  test.ragged.csv
viewer/: CLAUDE.md  DEPLOY.md  cohort.config.example.json  cyf_cohort.html  cyfview.html  view.py
